--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -92,6 +92,24 @@
 	<div>
 		
 	</div>
+	<!-- Modal -->
+	<div style="" class="modal" id="addGatewayInstanceDialog" role="dialog" >
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content">
+	    	  <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title" id="myModalLabel">Alert</h4>
+	      </div>
+	      <div class="modal-body" style="height:80px;padding-top: 25px;">
+	        <span style="font-size: medium;font-weight: bold;color: red;">Please select or create a gateway instance firstly!</span>
+	      </div>
+	      <!-- <div class="modal-footer">
+	        <button type="button" class="btn btn-success" data-dismiss="modal">&nbsp;No&nbsp;</button>
+	        <button type="button" class="btn btn-default" value="true" onclick="deviceModuleBtnGroup.deleteDevice(true)">Yes</button>
+	      </div> -->
+	    </div>
+	  </div>
+	</div>
 </body>
 <script src="/webjars/jquery/jquery.min.js"></script>
 <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
