--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -121,7 +121,7 @@
 		var name = $("#userName").val();
 		var pwd = $("#userPwd").val();
 		$.ajax({
-			url:'/auth/login',
+			url:'/api/v1/auth/login',
 			type:'POST',
 			contentType:'application/json',
 			data:JSON.stringify({'name':name,'password':pwd}),
@@ -130,7 +130,7 @@
 				var selectedGateway = JSON.parse(window.sessionStorage.getItem('selectedGateway'))
 				var addr = {"hostIP":selectedGateway.address};
 				$.ajax({
-					url: '/core-gateway/api/v1/proxy/host',
+					url: '/api/v1/gateway/proxy',
 					type: 'POST',
 					contentType:'application/json',
 					data:JSON.stringify(addr),
